deployment/k8s/nginx-ingress/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tika-ui
  labels:
    app.kubernetes.io/name: tika-ui
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "5"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: tika-ui
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tika-ui
            port:
              number: 8080
